--- a/index.html
+++ b/index.html
@@ -1,9 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>My GitHub Pages</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>动态星空</title>
+<style>
+body {
+margin: 0;
+background: black;
+overflow: hidden;
+}
+canvas {
+display: block;
+}
+</style>
 </head>
 <body>
-<h1>我让你看了吗？</h1>
+<canvas id="canvas"></canvas>
+<script>
+const canvas = document.getElementById('canvas');
+const ctx = canvas.getContext('2d');
+let w = canvas.width = window.innerWidth;
+let h = canvas.height = window.innerHeight;
+const stars = [];
+const maxStars = 1000;
+
+class Star {
+constructor() {
+this.x = Math.random() * w;
+this.y = Math.random() * h;
+this.radius = Math.random() * 1.5;
+this.alpha = Math.random();
+this.speed = Math.random() * 0.05 + 0.01;
+}
+draw() {
+ctx.beginPath();
+ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+ctx.fillStyle = `rgba(255, 255, 255, ${this.alpha})`;
+ctx.fill();
+}
+update() {
+this.alpha += this.speed;
+if (this.alpha > 1 || this.alpha < 0) this.speed *= -1;
+}
+}
+
+function createStars() {
+for (let i = 0; i < maxStars; i++) {
+stars.push(new Star());
+}
+}
+
+function animate() {
+ctx.clearRect(0, 0, w, h);
+stars.forEach(star => {
+star.update();
+star.draw();
+});
+requestAnimationFrame(animate);
+}
+
+createStars();
+animate();
+
+window.addEventListener('resize', () => {
+w = canvas.width = window.innerWidth;
+h = canvas.height = window.innerHeight;
+});
+</script>
 </body>
 </html>
