--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>静态页面</title>
+    <title>MISS</title>
     <style>
         * {
             margin: 0;
@@ -57,20 +57,14 @@
     <div class="container">
         <!-- 第一部分 -->
         <div class="section">
-            <h2>一、关于日常观察</h2>
-            <p>清晨的菜市场总藏着生活的热气——菜贩把带露的青菜码得整齐，阿姨们捏着塑料袋挑拣番茄，连讨价还价的声音都带着软和的烟火气。这些细碎的场景像散落的拼图，拼出普通人日子里的踏实。</p>
+            <h2>我想你了</h2>
+            <p>人们靠分开的痛觉来辨别爱意的深浅</p>
         </div>
 
         <!-- 第二部分 -->
         <div class="section">
-            <h2>二、关于简单的快乐</h2>
-            <p>有时快乐不用刻意找：傍晚散步时遇到摇尾巴的小狗，喝到刚泡好的热茶，或是翻旧书时掉出一张多年前的电影票。它们像小颗的糖，在忙碌里悄悄化出甜味，让日子变得软乎乎的。</p>
-        </div>
-
-        <!-- 第三部分 -->
-        <div class="section">
-            <h2>三、关于慢慢生长</h2>
-            <p>就像窗台的绿萝，每天看不出变化，久了却爬满了窗框。很多事都这样：不用急着要结果，把当下的每一步走稳——读几页书，学个小技能，哪怕只是认真吃一顿饭，时间会把这些攒成惊喜。</p>
+            <h2>I Miss You</h2>
+            <p>People tell the depth of love by the pain of separation</p>
         </div>
     </div>
 </body>
