--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MISS</title>
+    <title>三部分静态页面</title>
     <style>
         * {
             margin: 0;
@@ -55,16 +55,20 @@
 </head>
 <body>
     <div class="container">
-        <!-- 第一部分 -->
+    
         <div class="section">
-            <h2>我想你了</h2>
-            <p>人们靠分开的痛觉来辨别爱意的深浅</p>
+            <h2>1</h2>
+            <p>I miss you</p>
         </div>
 
-        <!-- 第二部分 -->
         <div class="section">
-            <h2>I Miss You</h2>
+            <h2>2</h2>
             <p>People tell the depth of love by the pain of separation</p>
+        </div>
+
+        <div class="section">
+            <h2>2</h2>
+            <p>Everything will be fine in the end. And if it isn't, it's not the end yet.</p>
         </div>
     </div>
 </body>
