--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
 
         <div class="section">
             <h2>2</h2>
-            <p>Everything will be fine in the end
-               And if it isn't
-               it's not the end yet</p>
+            <p>Everything will be fine in the end<br>And if it isn't<br>it's not the end yet</p>
         </div>
     </div>
 </body>
