--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
     <div class="container">
     
         <div class="section">
-            <h2>1</h2>
+            <h2>*</h2>
             <p>I miss you</p>
         </div>
 
         <div class="section">
-            <h2>2</h2>
+            <h2>*</h2>
             <p>People tell the depth of love by the pain of separation</p>
         </div>
 
         <div class="section">
-            <h2>2</h2>
-            <p>Everything will be fine in the end<br>And if it isn't<br>it's not the end yet</p>
+            <h2>*</h2>
+            <p>Everything will be fine in the end<br>And if it isn't<br>It's not the end yet</p>
         </div>
     </div>
 </body>
